[gd_scene load_steps=4 format=2]

[ext_resource path="res://CharaRT.gd" type="Script" id=1]
[ext_resource path="res://game.gd" type="Script" id=2]
[ext_resource path="res://Status.gd" type="Script" id=3]

[node name="game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="RichTextLabel" parent="."]
anchor_left = 0.261719
anchor_top = 0.168333
anchor_right = 0.835938
anchor_bottom = 0.913333
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CharaRT" type="RichTextLabel" parent="."]
anchor_bottom = 1.0
margin_right = 262.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -339.0
margin_top = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roll" type="Button" parent="HBoxContainer"]
margin_right = 44.0
margin_bottom = 40.0
text = "Roll"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shuffle_ect" type="Button" parent="HBoxContainer"]
margin_left = 48.0
margin_right = 115.0
margin_bottom = 40.0
text = "Shuffle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="encounter" type="Button" parent="HBoxContainer"]
margin_left = 119.0
margin_right = 210.0
margin_bottom = 40.0
text = "Encounter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shuffle" type="Button" parent="HBoxContainer"]
margin_left = 214.0
margin_right = 281.0
margin_bottom = 40.0
text = "Shuffle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="draw" type="Button" parent="HBoxContainer"]
margin_left = 285.0
margin_right = 339.0
margin_bottom = 40.0
text = "Draw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -262.0
margin_top = -168.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -67.0
margin_bottom = 27.0
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roll_result" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -105.0
margin_right = 106.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="GridContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -89.0
margin_right = 115.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_add" type="Button" parent="Menu"]
margin_right = 57.0
margin_bottom = 27.0
text = "+HP"

[node name="HP_rmv" type="Button" parent="Menu"]
margin_left = 61.0
margin_right = 115.0
margin_bottom = 27.0
text = "-HP"

[node name="SAN_add" type="Button" parent="Menu"]
margin_top = 31.0
margin_right = 57.0
margin_bottom = 58.0
text = "+SAN"

[node name="SAN_rmv" type="Button" parent="Menu"]
margin_left = 61.0
margin_top = 31.0
margin_right = 115.0
margin_bottom = 58.0
text = "-SAN"

[node name="RES_add" type="Button" parent="Menu"]
margin_top = 62.0
margin_right = 57.0
margin_bottom = 89.0
text = "+RES"

[node name="RES_rmv" type="Button" parent="Menu"]
margin_left = 61.0
margin_top = 62.0
margin_right = 115.0
margin_bottom = 89.0
text = "-RES"
[connection signal="meta_clicked" from="Status" to="Status" method="_on_Status_meta_clicked"]
[connection signal="meta_hover_ended" from="Status" to="Status" method="_on_Status_meta_hover_ended"]
[connection signal="meta_hover_started" from="Status" to="Status" method="_on_Status_meta_hover_started"]
[connection signal="pressed" from="HBoxContainer/roll" to="." method="_on_roll_pressed"]
[connection signal="pressed" from="HBoxContainer/shuffle_ect" to="." method="_on_shuffle_ect_pressed"]
[connection signal="pressed" from="HBoxContainer/encounter" to="." method="_on_encounter_pressed"]
[connection signal="pressed" from="HBoxContainer/shuffle" to="." method="_on_shuffle_pressed"]
[connection signal="pressed" from="HBoxContainer/draw" to="." method="_on_draw_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Menu/HP_add" to="." method="_on_HP_add_pressed"]
[connection signal="pressed" from="Menu/HP_rmv" to="." method="_on_HP_rmv_pressed"]
[connection signal="pressed" from="Menu/SAN_add" to="." method="_on_SAN_add_pressed"]
[connection signal="pressed" from="Menu/SAN_rmv" to="." method="_on_SAN_rmv_pressed"]
[connection signal="pressed" from="Menu/RES_add" to="." method="_on_RES_add_pressed"]
[connection signal="pressed" from="Menu/RES_rmv" to="." method="_on_RES_rmv_pressed"]
